--- a/examples/alpinejs-ts/index.html
+++ b/examples/alpinejs-ts/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + TS</title>
   </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+  <body style="padding: 40px">
+    <h1>Alpine.js + Zag</h1>
+
+    <a href="pages/accordion.html">Accordion</a>
+    <a href="pages/avatar.html">Avatar</a>
+    <a href="pages/popover.html">Popover</a>
+    <a href="pages/checkbox.html">Checkbox</a>
+    <a href="pages/combobox.html">Combobox</a>
   </body>
 </html>
