--- a/examples/alpinejs-ts/pages/accordion.html
+++ b/examples/alpinejs-ts/pages/accordion.html
@@ -9,23 +9,37 @@
 <body style="padding: 40px">
     <h1>Accordion</h1>
 
-   <div class="accordion">
-      <div class="accordion-item" data-value="a">
-        <button class="accordion-trigger">First Button</button>
-        <div class="accordion-content">First Content</div>
+    <div x-data="accordion" x-bind="api.getRootProps()">
+    <div x-text="JSON.stringify(api.value)"></div>
+      <div x-data="{ value: 'a' }" x-bind="api.getItemProps({ value })">
+        <button x-bind="api.getItemTriggerProps({ value })">
+          First Button
+        </button>
+        <div x-bind="api.getItemContentProps({ value })">
+          First Content
+        </div>
       </div>
 
-      <div class="accordion-item" data-value="b">
-        <button class="accordion-trigger">Second Button</button>
-        <div class="accordion-content">Second Content</div>
+      <div x-data="{ value: 'b' }" x-bind="api.getItemProps({ value })">
+        <button x-bind="api.getItemTriggerProps({ value })">
+          Second Button
+        </button>
+        <div x-bind="api.getItemContentProps({ value })">
+          Second Content
+        </div>
       </div>
 
-      <div class="accordion-item" data-value="c">
-        <button class="accordion-trigger">Third Button</button>
-        <div class="accordion-content">Third Content</div>
+      <div x-data="{ value: 'c' }" x-bind="api.getItemProps({ value })">
+        <button x-bind="api.getItemTriggerProps({ value })">
+          Third Button
+        </button>
+        <div x-bind="api.getItemContentProps({ value })">
+          Third Content
+        </div>
       </div>
     </div>
 
+  
     <script type="module" src="./accordion.ts"></script>
 </body>
 </html>
