feat(alpinejs): add angle slider example

--- a/examples/alpinejs-ts/index.html
+++ b/examples/alpinejs-ts/index.html
@@ -10,6 +10,7 @@
     <h1>Alpine.js + Zag</h1>
 
     <a href="pages/accordion.html">Accordion</a>
+    <a href="pages/angle-slider.html">Angle Slider</a>
     <a href="pages/avatar.html">Avatar</a>
     <a href="pages/popover.html">Popover</a>
     <a href="pages/checkbox.html">Checkbox</a>
