--- a/examples/alpinejs-ts/pages/angle-slider.html
+++ b/examples/alpinejs-ts/pages/angle-slider.html
@@ -8,7 +8,7 @@
     <title>Vite + TS</title>
   </head>
   <body style="padding: 40px">
-    <h1>Accordion</h1>
+    <h1>Angle Slider</h1>
 
     <div x-data="angleSlider" x-bind="api.getRootProps()">
       <label x-bind="api.getLabelProps()">
